/**
 * Parts of the schema is generated by better auth
 * - Parts of User model
 * - Session model
 * - Account model
 * - Verification model
 * Use `nr auth:generate` to regenerate the auth parts of the schema.
 */

generator client {
    provider = "prisma-client-js"
    output   = "../node_modules/@prisma-types/flux"
}

generator dbml {
    provider   = "prisma-dbml-generator"
    outputName = "flux.dbml"
}

datasource db {
    provider = "postgresql"
    url      = env("FLUX_DATABASE_URL")
}

// ****************************************************************************
// *** User
// ****************************************************************************

model User {
    id            String        @id @default(nanoid())
    email         String        @unique
    userNetworks  UserNetwork[]
    name          String
    emailVerified Boolean
    image         String?
    createdAt     DateTime
    updatedAt     DateTime
    sessions      Session[]
    accounts      Account[]

    @@map("user")
}

model Network {
    id           String        @id @default(nanoid())
    alias        String
    secretKey    String        @unique
    updatedAt    DateTime      @default(now())
    createdAt    DateTime      @default(now())
    userNetworks UserNetwork[]
}

model UserNetwork {
    id        String           @id @default(nanoid())
    userId    String
    user      User             @relation(fields: [userId], references: [id])
    role      EUserNetworkRole
    networkId String
    network   Network          @relation(fields: [networkId], references: [id])
}

// ****************************************************************************
// *** Stats
// ****************************************************************************

model UsageHistory {
    id         String   @id @default(nanoid())
    networkId  String   @unique
    usageKb    Int
    timeslotAt DateTime @default(now())
}

model ConnectedAuthoritiesHistory {
    id         String   @id @default(nanoid())
    networkId  String   @unique
    count      Int
    timeslotAt DateTime @default(now())
}

model ConnectedAgentsHistory {
    id         String   @id @default(nanoid())
    networkId  String   @unique
    count      Int
    timeslotAt DateTime @default(now())
}

model ChannelsHistory {
    id         String   @id @default(nanoid())
    networkId  String   @unique
    count      Int
    timeslotAt DateTime @default(now())
}

enum EUserNetworkRole {
    USER
    ADMIN
}

model Session {
    id        String   @id
    expiresAt DateTime
    token     String
    createdAt DateTime
    updatedAt DateTime
    ipAddress String?
    userAgent String?
    userId    String
    user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

    @@unique([token])
    @@map("session")
}

model Account {
    id                    String    @id
    accountId             String
    providerId            String
    userId                String
    user                  User      @relation(fields: [userId], references: [id], onDelete: Cascade)
    accessToken           String?
    refreshToken          String?
    idToken               String?
    accessTokenExpiresAt  DateTime?
    refreshTokenExpiresAt DateTime?
    scope                 String?
    password              String?
    createdAt             DateTime
    updatedAt             DateTime

    @@map("account")
}

model Verification {
    id         String    @id
    identifier String
    value      String
    expiresAt  DateTime
    createdAt  DateTime?
    updatedAt  DateTime?

    @@map("verification")
}
