//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table user {
  id String [pk]
  email String [unique, not null]
  userNetworks UserNetwork [not null]
  name String [not null]
  emailVerified Boolean [not null]
  image String
  createdAt DateTime [not null]
  updatedAt DateTime [not null]
  sessions session [not null]
  accounts account [not null]
}

Table Network {
  id String [pk]
  alias String [not null]
  secretKey String [unique, not null]
  updatedAt DateTime [default: `now()`, not null]
  createdAt DateTime [default: `now()`, not null]
  userNetworks UserNetwork [not null]
}

Table UserNetwork {
  id String [pk]
  userId String [not null]
  user user [not null]
  role EUserNetworkRole [not null]
  networkId String [not null]
  network Network [not null]
}

Table UsageHistory {
  id String [pk]
  networkId String [unique, not null]
  usageKb Int [not null]
  timeslotAt DateTime [default: `now()`, not null]
}

Table ConnectedAuthoritiesHistory {
  id String [pk]
  networkId String [unique, not null]
  count Int [not null]
  timeslotAt DateTime [default: `now()`, not null]
}

Table ConnectedAgentsHistory {
  id String [pk]
  networkId String [unique, not null]
  count Int [not null]
  timeslotAt DateTime [default: `now()`, not null]
}

Table ChannelsHistory {
  id String [pk]
  networkId String [unique, not null]
  count Int [not null]
  timeslotAt DateTime [default: `now()`, not null]
}

Table session {
  id String [pk]
  expiresAt DateTime [not null]
  token String [unique, not null]
  createdAt DateTime [not null]
  updatedAt DateTime [not null]
  ipAddress String
  userAgent String
  userId String [not null]
  user user [not null]
}

Table account {
  id String [pk]
  accountId String [not null]
  providerId String [not null]
  userId String [not null]
  user user [not null]
  accessToken String
  refreshToken String
  idToken String
  accessTokenExpiresAt DateTime
  refreshTokenExpiresAt DateTime
  scope String
  password String
  createdAt DateTime [not null]
  updatedAt DateTime [not null]
}

Table verification {
  id String [pk]
  identifier String [not null]
  value String [not null]
  expiresAt DateTime [not null]
  createdAt DateTime
  updatedAt DateTime
}

Enum EUserNetworkRole {
  USER
  ADMIN
}

Ref: UserNetwork.userId > user.id

Ref: UserNetwork.networkId > Network.id

Ref: session.userId > user.id [delete: Cascade]

Ref: account.userId > user.id [delete: Cascade]